--- a/index.html
+++ b/index.html
@@ -8,46 +8,39 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
 </head>
 <body>
-
-  <div class="masthead">
+  <header class="masthead" role="banner">
     <h1>
-      <img src="images/logo.svg">
+      <img src="images/logo.svg" alt="logo">
       <span>Arrrgene’s Treasure Tours</span>
     </h1>
-    <div class="nav" role="navigation">
+    <nav class="nav" role="navigation">
       <ul>
         <li><a href="#">Tours</a></li>
         <li><a href="#">Ships</a></li>
         <li><a href="#">Tickets</a></li>
       </ul>
-    </div>
-  </div>
-
-  <div role="main">
-
+    </nav>
+  </header>
+  <main role="main">
     <div class="banner">
-      <img src="images/banner.jpg">
+      <img src="images/banner.jpg" alt="World map">
       <div>
         <h2>Ahoy, me Hearties!</h2>
         <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
         <a href="#">Book a tour</a>
       </div>
     </div>
-
-    <div class="ship">
+    <section class="ship">
       <div class="card">
-        <img src="images/ship.svg">
+        <img src="images/ship.svg" alt="ship">
         <h2>Heave Ho!</h2>
         <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
         <a href="#">See the specs</a>
       </div>
-    </div>
-
-  </div>
-
-  <div class="footer">
+    </section>
+  </main>
+  <footer class="footer" role="contentinfo">
     <p>© Arrrgene’s Treasure Tours</p>
-  </div>
-
+  </footer>
 </body>
 </html>
